PROACTIVE-150 Removed class-path entry to fix classloader functional test Updated StartRuntime to avoid loss of log4j messages when classloader is enabled. log4j should be ready before loading any ProActive classes
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@7393 28e8926c-6b08-0410-baaa-805c5e19b8d6